Fix Letter-Spacing for non-chrome browsers

--- a/styles/main.css
+++ b/styles/main.css
@@ -84,7 +84,7 @@ nav {width: 100%;}
 		font-weight: bold;
 		float: left;
 		padding: 5px 45px;
-		letter-spacing: 7px;
+		letter-spacing: 6px;
 		text-decoration: none;
 	 }
  
